Minor changes on results cells

--- a/Scan_Ip_Postdoc.ipynb
+++ b/Scan_Ip_Postdoc.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 67,
    "id": "887238a0-a1e9-4e0a-b49b-368fb0520038",
    "metadata": {
     "colab": {
@@ -65,13 +65,17 @@
     "import itertools\n",
     "from cycler import cycler\n",
     "\n",
-    "mpl.rcParams['image.cmap'] = 'RdYlBu_r'\n",
-    "\n",
-    "plt.close('all')\n",
+    "## Set up rc\n",
+    "plt.rcParams['image.cmap'] = 'RdYlBu_r'\n",
     "plt.rcParams['axes.formatter.limits'] = (-3,1)\n",
     "plt.rc('font',size=18)\n",
     "plt.rcParams['lines.linewidth'] = 2\n",
     "plt.rcParams.update({\"axes.grid\" : True})\n",
+    "plt.rcParams['lines.markersize'] = 8\n",
+    "plt.rcParams['lines.markeredgecolor'] = 'k'\n",
+    "plt.rcParams['lines.markeredgewidth'] = 2.0\n",
+    "me = (0.1,0.1)\n",
+    "#print(plt.rcParams.keys())\n",
     "\n",
     "#Size of figures\n",
     "laptop    = 6\n",
@@ -159,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 20,
    "id": "2186af80-4b36-4285-85ed-55ff5da9f574",
    "metadata": {
     "id": "2186af80-4b36-4285-85ed-55ff5da9f574",
@@ -211,6 +215,11 @@
     "all_sim = [qprof_05, qprof_1, qprof_15, qprof_05_n0, qprof_15_n0, qprof_05new, qprof_05_br, qprof_075_br, qprof_15_br]\n",
     "\n",
     "print(qprof_05_br.keys())\n",
+    "\n",
+    "## Add markers entry to each dictionnary\n",
+    "marker_ar = ['o', 's', 'v', 'D', 'P', 'X', 'd', 'p', 'x']\n",
+    "for iq,q in enumerate(all_sim):\n",
+    "    q['marker'] = marker_ar[iq]\n",
     "\n",
     "daltonian = 0\n",
     "if daltonian:\n",
@@ -1615,19 +1624,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 51,
    "id": "9012abdd",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "0aab7f012d36403ab1e5ad79d5ba3e6c",
+       "model_id": "ce910de8c865416b973f83967a127277",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "interactive(children=(FloatSlider(value=65.0, description='dpi_adjust', min=30.0, step=1.0), FloatRangeSlider(…"
+       "interactive(children=(FloatSlider(value=100.0, description='dpi_adjust', min=30.0, step=1.0), FloatRangeSlider…"
       ]
      },
      "metadata": {},
@@ -1639,8 +1648,9 @@
        "<function __main__.update_plot(dpi_adjust, float_range_time, float_range_rho, q05_bool, q1_bool, q15_bool, q05n0_bool, q15n0_bool, q05new_bool)>"
       ]
      },
+     "execution_count": 51,
      "metadata": {},
-     "output_type": "display_data"
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -1713,7 +1723,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 68,
    "id": "f361416e-79af-482b-a88e-20b7d748847e",
    "metadata": {
     "colab": {
@@ -1735,7 +1745,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e6f7651c28a741cf8c4bf316295453d6",
+       "model_id": "248ec40728f34024806547ef949b26e9",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1745,48 +1755,35 @@
      },
      "metadata": {},
      "output_type": "display_data"
-    },
-    {
-     "ename": "FileNotFoundError",
-     "evalue": "[Errno 2] No such file or directory: 'Figures/Scan_Ip_q_profiles.pdf'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[6], line 23\u001b[0m\n\u001b[0;32m     19\u001b[0m ax1\u001b[39m.\u001b[39maxhline(y\u001b[39m=\u001b[39m\u001b[39m1\u001b[39m,c\u001b[39m=\u001b[39m\u001b[39m'\u001b[39m\u001b[39mk\u001b[39m\u001b[39m'\u001b[39m,ls\u001b[39m=\u001b[39m\u001b[39m'\u001b[39m\u001b[39m--\u001b[39m\u001b[39m'\u001b[39m)\n\u001b[0;32m     21\u001b[0m fig\u001b[39m.\u001b[39mtight_layout()\n\u001b[1;32m---> 23\u001b[0m fig\u001b[39m.\u001b[39;49msavefig(\u001b[39m'\u001b[39;49m\u001b[39mFigures/Scan_Ip_q_profiles.pdf\u001b[39;49m\u001b[39m'\u001b[39;49m, \u001b[39mformat\u001b[39;49m\u001b[39m=\u001b[39;49m\u001b[39m'\u001b[39;49m\u001b[39mpdf\u001b[39;49m\u001b[39m'\u001b[39;49m, bbox_inches\u001b[39m=\u001b[39;49m\u001b[39m'\u001b[39;49m\u001b[39mtight\u001b[39;49m\u001b[39m'\u001b[39;49m)\n",
-      "File \u001b[1;32m~\\AppData\\Roaming\\Python\\Python38\\site-packages\\matplotlib\\figure.py:2180\u001b[0m, in \u001b[0;36mFigure.savefig\u001b[1;34m(self, fname, transparent, **kwargs)\u001b[0m\n\u001b[0;32m   2177\u001b[0m     original_frameon \u001b[39m=\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mpatch\u001b[39m.\u001b[39mget_visible()\n\u001b[0;32m   2178\u001b[0m     \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mpatch\u001b[39m.\u001b[39mset_visible(frameon)\n\u001b[1;32m-> 2180\u001b[0m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mcanvas\u001b[39m.\u001b[39;49mprint_figure(fname, \u001b[39m*\u001b[39;49m\u001b[39m*\u001b[39;49mkwargs)\n\u001b[0;32m   2182\u001b[0m \u001b[39mif\u001b[39;00m frameon:\n\u001b[0;32m   2183\u001b[0m     \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mpatch\u001b[39m.\u001b[39mset_visible(original_frameon)\n",
-      "File \u001b[1;32m~\\AppData\\Roaming\\Python\\Python38\\site-packages\\matplotlib\\backend_bases.py:2082\u001b[0m, in \u001b[0;36mFigureCanvasBase.print_figure\u001b[1;34m(self, filename, dpi, facecolor, edgecolor, orientation, format, bbox_inches, **kwargs)\u001b[0m\n\u001b[0;32m   2079\u001b[0m     _bbox_inches_restore \u001b[39m=\u001b[39m \u001b[39mNone\u001b[39;00m\n\u001b[0;32m   2081\u001b[0m \u001b[39mtry\u001b[39;00m:\n\u001b[1;32m-> 2082\u001b[0m     result \u001b[39m=\u001b[39m print_method(\n\u001b[0;32m   2083\u001b[0m         filename,\n\u001b[0;32m   2084\u001b[0m         dpi\u001b[39m=\u001b[39;49mdpi,\n\u001b[0;32m   2085\u001b[0m         facecolor\u001b[39m=\u001b[39;49mfacecolor,\n\u001b[0;32m   2086\u001b[0m         edgecolor\u001b[39m=\u001b[39;49medgecolor,\n\u001b[0;32m   2087\u001b[0m         orientation\u001b[39m=\u001b[39;49morientation,\n\u001b[0;32m   2088\u001b[0m         bbox_inches_restore\u001b[39m=\u001b[39;49m_bbox_inches_restore,\n\u001b[0;32m   2089\u001b[0m         \u001b[39m*\u001b[39;49m\u001b[39m*\u001b[39;49mkwargs)\n\u001b[0;32m   2090\u001b[0m \u001b[39mfinally\u001b[39;00m:\n\u001b[0;32m   2091\u001b[0m     \u001b[39mif\u001b[39;00m bbox_inches \u001b[39mand\u001b[39;00m restore_bbox:\n",
-      "File \u001b[1;32m~\\AppData\\Roaming\\Python\\Python38\\site-packages\\matplotlib\\backends\\backend_pdf.py:2496\u001b[0m, in \u001b[0;36mFigureCanvasPdf.print_pdf\u001b[1;34m(self, filename, dpi, bbox_inches_restore, metadata, **kwargs)\u001b[0m\n\u001b[0;32m   2494\u001b[0m     file \u001b[39m=\u001b[39m filename\u001b[39m.\u001b[39m_file\n\u001b[0;32m   2495\u001b[0m \u001b[39melse\u001b[39;00m:\n\u001b[1;32m-> 2496\u001b[0m     file \u001b[39m=\u001b[39m PdfFile(filename, metadata\u001b[39m=\u001b[39;49mmetadata)\n\u001b[0;32m   2497\u001b[0m \u001b[39mtry\u001b[39;00m:\n\u001b[0;32m   2498\u001b[0m     file\u001b[39m.\u001b[39mnewPage(width, height)\n",
-      "File \u001b[1;32m~\\AppData\\Roaming\\Python\\Python38\\site-packages\\matplotlib\\backends\\backend_pdf.py:432\u001b[0m, in \u001b[0;36mPdfFile.__init__\u001b[1;34m(self, filename, metadata)\u001b[0m\n\u001b[0;32m    430\u001b[0m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39moriginal_file_like \u001b[39m=\u001b[39m \u001b[39mNone\u001b[39;00m\n\u001b[0;32m    431\u001b[0m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mtell_base \u001b[39m=\u001b[39m \u001b[39m0\u001b[39m\n\u001b[1;32m--> 432\u001b[0m fh, opened \u001b[39m=\u001b[39m cbook\u001b[39m.\u001b[39;49mto_filehandle(filename, \u001b[39m\"\u001b[39;49m\u001b[39mwb\u001b[39;49m\u001b[39m\"\u001b[39;49m, return_opened\u001b[39m=\u001b[39;49m\u001b[39mTrue\u001b[39;49;00m)\n\u001b[0;32m    433\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39mnot\u001b[39;00m opened:\n\u001b[0;32m    434\u001b[0m     \u001b[39mtry\u001b[39;00m:\n",
-      "File \u001b[1;32m~\\AppData\\Roaming\\Python\\Python38\\site-packages\\matplotlib\\cbook\\__init__.py:432\u001b[0m, in \u001b[0;36mto_filehandle\u001b[1;34m(fname, flag, return_opened, encoding)\u001b[0m\n\u001b[0;32m    430\u001b[0m         fh \u001b[39m=\u001b[39m bz2\u001b[39m.\u001b[39mBZ2File(fname, flag)\n\u001b[0;32m    431\u001b[0m     \u001b[39melse\u001b[39;00m:\n\u001b[1;32m--> 432\u001b[0m         fh \u001b[39m=\u001b[39m \u001b[39mopen\u001b[39;49m(fname, flag, encoding\u001b[39m=\u001b[39;49mencoding)\n\u001b[0;32m    433\u001b[0m     opened \u001b[39m=\u001b[39m \u001b[39mTrue\u001b[39;00m\n\u001b[0;32m    434\u001b[0m \u001b[39melif\u001b[39;00m \u001b[39mhasattr\u001b[39m(fname, \u001b[39m'\u001b[39m\u001b[39mseek\u001b[39m\u001b[39m'\u001b[39m):\n",
-      "\u001b[1;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: 'Figures/Scan_Ip_q_profiles.pdf'"
-     ]
     }
    ],
    "source": [
-    "plt.rc('font',size=22)\n",
+    "plt.rc('font',size=20)\n",
     "q_ar = [qprof_05,qprof_1,qprof_15]\n",
-    "q_ar = [qprof_05_br,qprof_075_br,qprof_15_br]\n",
+    "#q_ar = [qprof_05_br,qprof_075_br,qprof_15_br]\n",
     "\n",
-    "fig = plt.figure(figsize=(8,6))\n",
+    "fig = plt.figure(figsize=(8,8))\n",
     "ax1 = fig.add_subplot(111)\n",
-    "\n",
+    "#ax1.set_title('Safety factor')\n",
     "for iq,q in enumerate(q_ar):\n",
-    "    ax1.set_title('Safety factor')\n",
+    "    irhomin = (np.abs(q['rho'] - 0.2 )).argmin()\n",
+    "    irhomax = (np.abs(q['rho'] - 1.0 )).argmin()\n",
+    "\n",
     "    irho = (np.abs(q['rho'] - 0.95 )).argmin()\n",
-    "    \n",
-    "    ax1.plot(q['rho'], q['q'], label=q['title']+r', $q_{95} = %.1f$' % q['q'][irho],c=q['c'],lw=4)\n",
+    "    ax1.plot(q['rho'][irhomin:irhomax], q['q'][irhomin:irhomax], label=q['title']+r', $q_{95} = %.1f$' % q['q'][irho],c=q['c'],lw=4,marker=q['marker'],markevery=me)\n",
     "ax1.legend()\n",
     "ax1.set_xlabel(r'$r/a$')\n",
     "ax1.set_ylabel(r'$q$')\n",
-    "ax1.axvline(x=1,ls='--',c='k')\n",
-    "ax1.set_xlim(left=-0.01,right=1.31)\n",
+    "ax1.axvline(x=1,ls='--',c='k'); ax1.axhline(y=0,ls='--',c='k')\n",
+    "ax1.set_xlim(left=q['rho'][irhomin],right=q['rho'][irhomax])\n",
     "\n",
-    "ax1.axhline(y=1,c='k',ls='--')\n",
+    "ax1.axhline(y=1,c='g',ls='-.',lw=3)\n",
+    "ax1.text(x=0.9, y=0.9, s=r'$q=1$', verticalalignment='top',c='g')\n",
     "\n",
-    "fig.tight_layout()\n",
+    "fig.tight_layout(rect=[0, 0.03, 1, 0.95])\n",
     "\n",
-    "#fig.savefig('Figures/Scan_Ip_q_profiles.pdf', format='pdf', bbox_inches='tight')"
+    "fig.set_size_inches(8, 8)\n",
+    "fig.savefig('Figures/rprof_q_profiles.pdf', format='pdf', bbox_inches='tight')"
    ]
   },
   {
@@ -2091,7 +2088,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 69,
    "id": "1fa686e3-c293-40df-a39f-2738fac08f42",
    "metadata": {
     "colab": {
@@ -2114,7 +2111,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ff2f7fef614144f28f965eb6cbc8baf9",
+       "model_id": "acd8e5694d8b4fa39df840a376ab5550",
        "version_major": 2,
        "version_minor": 0
       },
@@ -2128,7 +2125,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "9cc813b5d64e49879e1f81bb74f4e69a",
+       "model_id": "4df85b21958841999d3f3a70016ab7cd",
        "version_major": 2,
        "version_minor": 0
       },
@@ -2142,7 +2139,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a6e21529006646aa8a051826b7685b56",
+       "model_id": "ec54e3e433b64033aa7615c11cfa8401",
        "version_major": 2,
        "version_minor": 0
       },
@@ -2156,10 +2153,9 @@
    ],
    "source": [
     "plt.rcParams['axes.formatter.limits'] = (-5,6)\n",
+    "plt.rc('font',size=20)\n",
     "q_ar = [qprof_05,qprof_1,qprof_15]\n",
     "#q_ar = [qprof_05_n0,qprof_15_n0]\n",
-    "param_ar = ['Phi00','Phi01','dPhi01dr','Er','VP','dErdr','RSpol','RSphi','dRSphidr','VT','nustar']\n",
-    "param_ar = ['Gamma_vD', 'Gamma_vE', 'Gamma_vEn0', 'Gamma_vEndiff0']\n",
     "\n",
     "param_ar = ['Er','VT','VP']\n",
     "\n",
@@ -2174,13 +2170,13 @@
     "    ax1 = fig.add_subplot(111)\n",
     "    for iq,q in enumerate(q_ar):\n",
     "        \n",
-    "        irhomin = (np.abs(q['rho'] - 0.1 )).argmin()\n",
+    "        irhomin = (np.abs(q['rho'] - 0.2 )).argmin()\n",
     "        irhomax = (np.abs(q['rho'] - 1.0 )).argmin()\n",
     "\n",
     "        itmin = (np.abs(q['time'] - 100.0e3 )).argmin()\n",
     "        itmax = (np.abs(q['time'] - 145.0e3 )).argmin()\n",
     "        \n",
-    "        ax1.plot(q['rho'][irhomin:irhomax], np.mean( q[p][itmin:itmax,irhomin:irhomax],axis=0),ls=q['ls'],c=q['c'],lw=4,label=q['title'])\n",
+    "        ax1.plot(q['rho'][irhomin:irhomax], np.mean( q[p][itmin:itmax,irhomin:irhomax],axis=0),ls=q['ls'],c=q['c'],lw=4,label=q['title'],marker=q['marker'],markevery=me)\n",
     "        #ax1.plot(q['rho'][irhomin:irhomax], np.mean( q[p][itmin:itmax,irhomin:irhomax],axis=0) /q['q'][irhomin:irhomax],ls='--',c=q['c'],label=q['title'])\n",
     "        \n",
     "        ax1.axhline(y=0,ls='--',c='k')\n",
@@ -2192,12 +2188,16 @@
     "    ax1.set_xlabel(r'$r/a$')\n",
     "    \n",
     "    ax1.axvline(x=1,ls='--',c='k')\n",
+    "\n",
+    "    ax1.set_xlim(left=q['rho'][irhomin],right=q['rho'][irhomax])\n",
+    "\n",
     "    #ax1.text(x=0.7,y=(y_min_ar[ip]+y_max_ar[ip])/2.,s=r\"$\\nearrow I_P$\",fontsize=18,c='g')\n",
     "    \n",
     "    #ax1.annotate(\"\", xy=(0.8, y_min_ar[ip]), xytext=(0.8, y_max_ar[ip]),arrowprops=dict(width=5,facecolor='none',edgecolor='g'),horizontalalignment='center', verticalalignment='center')\n",
     "    \n",
     "    fig.tight_layout(rect=[0, 0.03, 1, 0.95])\n",
     "    \n",
+    "    fig.set_size_inches(8, 8)\n",
     "    fig.savefig('Figures/rprof_'+p+'_scanq.pdf', format='pdf', bbox_inches='tight')"
    ]
   },
@@ -2309,7 +2309,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 77,
    "id": "6081a227-27fb-4d69-8194-66c6339a4189",
    "metadata": {
     "colab": {
@@ -2330,7 +2330,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b971878585004ea9a0359e17943bca65",
+       "model_id": "c5628e04e68944d589a35a7c87a3ac5a",
        "version_major": 2,
        "version_minor": 0
       },
@@ -2344,38 +2344,34 @@
    ],
    "source": [
     "plt.rcParams['axes.formatter.limits'] = (-5,6)\n",
+    "plt.rc('font',size=20)\n",
     "q_ar = [qprof_05,qprof_1,qprof_15]\n",
     "\n",
-    "param_ar = ['turb_int_sq_avg']\n",
-    "\n",
-    "title_ar = [r'$\\mathcal{I}$']\n",
-    "\n",
-    "fig = plt.figure(figsize=(7,7))\n",
-    "#fig.suptitle(p)\n",
+    "fig = plt.figure(figsize=(8,8))\n",
     "ax1 = fig.add_subplot(111)\n",
     "\n",
     "for iq,q in enumerate(q_ar):\n",
-    "    irhomin = (np.abs(q['rho'] - 0.1 )).argmin()\n",
+    "    irhomin = (np.abs(q['rho'] - 0.2 )).argmin()\n",
     "    irhomax = (np.abs(q['rho'] - 1.0 )).argmin()\n",
     "\n",
-    "    itmin = (np.abs(q['time'] - 80.0e3 )).argmin()\n",
-    "    itmax = (np.abs(q['time'] - 100.0e3 )).argmin()\n",
+    "    itmin = (np.abs(q['time'] - 100.0e3 )).argmin()\n",
+    "    itmax = (np.abs(q['time'] - 145.0e3 )).argmin()\n",
     "\n",
-    "    ax1.plot(q['rho'][irhomin:irhomax], np.sqrt(np.mean( (q['turb_int_sq_avg'])[itmin:itmax,irhomin:irhomax],axis=0)),ls=q['ls'],c=q['c'],label=q['title'])\n",
+    "    ax1.plot(q['rho'][irhomin:irhomax], np.sqrt(np.mean( (q['turb_int_sq_avg'])[itmin:itmax,irhomin:irhomax],axis=0)),ls=q['ls'],c=q['c'],lw=4,label=q['title'],marker=q['marker'],markevery=me)\n",
     "\n",
     "    ax1.axhline(y=0,ls='--',c='k')\n",
     "\n",
     "ax1.set_ylabel(r'$\\mathcal{I}$')\n",
-    "#ax1.ticklabel_format(axis='y',scilimits=(-1,2),useMathText=True)\n",
     "\n",
-    "ax1.legend()\n",
+    "ax1.legend(loc='upper left',fontsize=18)\n",
     "ax1.set_xlabel(r'$r/a$')\n",
+    "ax1.set_xlim(left=q['rho'][irhomin],right=q['rho'][irhomax])\n",
     "\n",
     "ax1.axvline(x=1,ls='--',c='k')\n",
     "\n",
     "fig.tight_layout(rect=[0, 0.03, 1, 0.95])\n",
     "\n",
-    "#fig.savefig('Figures/rprof_turb_intens_scanq.pdf', format='pdf', bbox_inches='tight')"
+    "fig.savefig('Figures/rprof_turb_intens_scanq.pdf', format='pdf', bbox_inches='tight')"
    ]
   },
   {
