--- a/Scan_Ip_Postdoc.ipynb
+++ b/Scan_Ip_Postdoc.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 26,
    "id": "887238a0-a1e9-4e0a-b49b-368fb0520038",
    "metadata": {
     "colab": {
@@ -40,8 +40,12 @@
     "import ipywidgets as widgets\n",
     "%matplotlib widget\n",
     "\n",
+    "# import cupy as np\n",
+    "# from cupyx.scipy.ndimage import uniform_filter1d\n",
+    "\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
+    "\n",
     "\n",
     "from scipy import special\n",
     "import scipy.integrate as integrate\n",
@@ -87,68 +91,7 @@
     "dpi_laptop = 50\n",
     "dpi_cadarache = 65\n",
     "dpi_home = 100\n",
-    "dpi_custom = dpi_home\n",
-    "\n",
-    "def Fourier2D(F0, y0, x0):\n",
-    "    nx0 = len(x0)\n",
-    "    nx  = 2 * int(nx0 / 2)\n",
-    "    hnx = int(nx / 2)\n",
-    "    ny0 = len(y0)\n",
-    "    ny  = 2 * int(ny0 / 2)\n",
-    "    hny = int(ny / 2)\n",
-    "\n",
-    "    x = x0[0:nx]\n",
-    "    y = y0[0:ny]\n",
-    "    F = F0[0:ny, 0:nx]\n",
-    "\n",
-    "    Lx   = x[nx - 1] - x[0]\n",
-    "    dx   = x[1] - x[0]\n",
-    "    dkx  = 2. * np.pi / (Lx + dx)\n",
-    "    kx   = np.zeros(nx)\n",
-    "    temp = -dkx * np.r_[1:hnx + 1]\n",
-    "    kx[0:hnx]  = temp[::-1]\n",
-    "    kx[hnx:nx] = dkx * np.r_[0:hnx]\n",
-    "\n",
-    "    Ly   = y[ny - 1] - y[0]\n",
-    "    dy   = y[1] - y[0]\n",
-    "    dky  = 2. * np.pi / (Ly + dy)\n",
-    "    ky   = np.zeros(ny)\n",
-    "    temp = -dky * np.r_[1:hny + 1]\n",
-    "    ky[0:hny]  = temp[::-1]\n",
-    "    ky[hny:ny] = dky * np.r_[0:hny]\n",
-    "\n",
-    "    TFF = np.zeros((ny, nx), dtype=complex)\n",
-    "    AA  = np.zeros((ny, nx), dtype=complex)\n",
-    "    var = np.conjugate(np.fft.fft2(np.conjugate(F))) / float((nx * ny))\n",
-    "\n",
-    "    AA[:, 0:hnx]   = var[:, hnx:nx]\n",
-    "    AA[:, hnx:nx]  = var[:, 0:hnx]\n",
-    "    TFF[0:hny, :]  = AA[hny:ny, :]\n",
-    "    TFF[hny:ny, :] = AA[0:hny, :]\n",
-    "\n",
-    "    return TFF, kx, ky\n",
-    "\n",
-    "def Fourier1D(F0, x0, axis=-1):\n",
-    "    \"\"\" Personal FFT1D function\"\"\"\n",
-    "    x0 = np.asarray(x0)\n",
-    "    assert x0.ndim == 1\n",
-    "\n",
-    "    nx0 = len(x0)\n",
-    "    nx  = 2 * int(nx0 / 2)\n",
-    "    hnx = int(nx / 2)\n",
-    "\n",
-    "    dx = x0[1] - x0[0]\n",
-    "    kx = 2 * np.pi / dx * np.linspace(-.5, .5, nx, endpoint=False)\n",
-    "\n",
-    "    TFF  = np.conjugate(np.fft.fft(\n",
-    "        np.conjugate(F0),\n",
-    "        n=nx, # crop `axis` at length `nx`\n",
-    "        axis=axis\n",
-    "    ))\n",
-    "    TFF /= nx\n",
-    "    TFF  = np.fft.fftshift(TFF, axes=axis)\n",
-    "\n",
-    "    return TFF, kx"
+    "dpi_custom = dpi_home"
    ]
   },
   {
@@ -163,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 27,
    "id": "2186af80-4b36-4285-85ed-55ff5da9f574",
    "metadata": {
     "id": "2186af80-4b36-4285-85ed-55ff5da9f574",
@@ -194,7 +137,7 @@
     "            if isinstance(v, bytes):\n",
     "                d[k] = v.decode('utf-8')\n",
     "            else:\n",
-    "                d[k] = v\n",
+    "                d[k] = np.array(v)\n",
     "    return d\n",
     "\n",
     "qprof_05 = hdf5_to_dict('data/TS45511_q05.hdf5'); qprof_05['title']=r'$q_{0.5}$'; qprof_05['c']='xkcd:electric blue'; qprof_05['ls']='-'\n",
@@ -345,7 +288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 33,
    "id": "8ce0e36c-fce9-4840-a583-0c5d98c19af1",
    "metadata": {
     "jupyter": {
@@ -357,7 +300,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d34677016d044171b7e090fb32c5b7ba",
+       "model_id": "fab5ada2ed1746f0af0ff027f2c07464",
        "version_major": 2,
        "version_minor": 0
       },
@@ -371,7 +314,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a7508244cafb40b793f05f4f09172d39",
+       "model_id": "181edf2450254cb28ed0d02c2bc3a761",
        "version_major": 2,
        "version_minor": 0
       },
@@ -388,7 +331,7 @@
        "<function __main__.update_plot(N, dpi_adjust, param, param2, float_range_time, q05_bool, q1_bool, q15_bool, q05n0_bool, q15n0_bool, q05new_bool, q05br_bool, q075br_bool, q15br_bool)>"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -493,14 +436,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 34,
    "id": "8fdc5558",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "779f7c5cdad04b228fac7407618ace89",
+       "model_id": "223b18a9c9314fc1aeade1457e32e23a",
        "version_major": 2,
        "version_minor": 0
       },
@@ -514,7 +457,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "342e706acfa444cb91224cb515db4176",
+       "model_id": "deb29fd0eca64da08fe08abc709df1ad",
        "version_major": 2,
        "version_minor": 0
       },
@@ -531,7 +474,7 @@
        "<function __main__.update_plot(N, dpi_adjust, param, q05_bool, q1_bool, q15_bool, q05n0_bool, q15n0_bool, q05new_bool, q05br_bool, q075br_bool, q15br_bool, it_play, bool_fixed_y_range)>"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -985,7 +928,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "id": "28430aa3-fa1c-4b75-83c6-4d7a72dc3460",
    "metadata": {
     "collapsed": true,
@@ -998,7 +941,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "4325a81f897140ce8bfb074cd891fc7d",
+       "model_id": "c58e993c593d414c8ace5760f8b8d0d2",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1015,33 +958,9 @@
        "<function __main__.update_plot(N, colormap_range, dpi_adjust, param, float_range_time, float_range_rho, q05_bool, q1_bool, q15_bool, q05n0_bool, q15n0_bool, q05new_bool, q05br_bool, q075br_bool, q15br_bool, mode)>"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "No such comm: 0b63101220b04852a869a86b2f8e04bb\n",
-      "No such comm: 0b63101220b04852a869a86b2f8e04bb\n",
-      "No such comm: 0b63101220b04852a869a86b2f8e04bb\n",
-      "No such comm: 0b63101220b04852a869a86b2f8e04bb\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "No such comm: dc36c2fe6b2e4dd2b167a968d21aa843\n",
-      "No such comm: dc36c2fe6b2e4dd2b167a968d21aa843\n",
-      "No such comm: dc36c2fe6b2e4dd2b167a968d21aa843\n",
-      "No such comm: dc36c2fe6b2e4dd2b167a968d21aa843\n",
-      "No such comm: b43c67534c1242b895756f6043fe87fd\n",
-      "No such comm: b43c67534c1242b895756f6043fe87fd\n",
-      "No such comm: b43c67534c1242b895756f6043fe87fd\n",
-      "No such comm: b43c67534c1242b895756f6043fe87fd\n"
-     ]
     }
    ],
    "source": [
@@ -2541,6 +2460,188 @@
     "interact(update_plot, \n",
     "         N=widgets.IntSlider(min=1, max=100, step=1,value=60),\n",
     "         dpi_adjust=widgets.FloatSlider(min=30, max=200, step=1,value=100));"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "458792c3",
+   "metadata": {},
+   "source": [
+    "## <font color='royalblue'>**Temporaire**</font> - Test cupy"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "002f4d56",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1.27077224e-03 3.81231672e-03 6.35386119e-03 8.89540567e-03\n",
+      " 1.14369501e-02 1.39784946e-02 1.65200391e-02 1.90615836e-02\n",
+      " 2.16031281e-02 2.41446725e-02 2.66862170e-02 2.92277615e-02\n",
+      " 3.17693060e-02 3.43108504e-02 3.68523949e-02 3.93939394e-02\n",
+      " 4.19354839e-02 4.44770283e-02 4.70185728e-02 4.95601173e-02\n",
+      " 5.21016618e-02 5.46432063e-02 5.71847507e-02 5.97262952e-02\n",
+      " 6.22678397e-02 6.48093842e-02 6.73509286e-02 6.98924731e-02\n",
+      " 7.24340176e-02 7.49755621e-02 7.75171065e-02 8.00586510e-02\n",
+      " 8.26001955e-02 8.51417400e-02 8.76832845e-02 9.02248289e-02\n",
+      " 9.27663734e-02 9.53079179e-02 9.78494624e-02 1.00391007e-01\n",
+      " 1.02932551e-01 1.05474096e-01 1.08015640e-01 1.10557185e-01\n",
+      " 1.13098729e-01 1.15640274e-01 1.18181818e-01 1.20723363e-01\n",
+      " 1.23264907e-01 1.25806452e-01 1.28347996e-01 1.30889541e-01\n",
+      " 1.33431085e-01 1.35972630e-01 1.38514174e-01 1.41055718e-01\n",
+      " 1.43597263e-01 1.46138807e-01 1.48680352e-01 1.51221896e-01\n",
+      " 1.53763441e-01 1.56304985e-01 1.58846530e-01 1.61388074e-01\n",
+      " 1.63929619e-01 1.66471163e-01 1.69012708e-01 1.71554252e-01\n",
+      " 1.74095797e-01 1.76637341e-01 1.79178886e-01 1.81720430e-01\n",
+      " 1.84261975e-01 1.86803519e-01 1.89345064e-01 1.91886608e-01\n",
+      " 1.94428152e-01 1.96969697e-01 1.99511241e-01 2.02052786e-01\n",
+      " 2.04594330e-01 2.07135875e-01 2.09677419e-01 2.12218964e-01\n",
+      " 2.14760508e-01 2.17302053e-01 2.19843597e-01 2.22385142e-01\n",
+      " 2.24926686e-01 2.27468231e-01 2.30009775e-01 2.32551320e-01\n",
+      " 2.35092864e-01 2.37634409e-01 2.40175953e-01 2.42717498e-01\n",
+      " 2.45259042e-01 2.47800587e-01 2.50342131e-01 2.52883675e-01\n",
+      " 2.55425220e-01 2.57966764e-01 2.60508309e-01 2.63049853e-01\n",
+      " 2.65591398e-01 2.68132942e-01 2.70674487e-01 2.73216031e-01\n",
+      " 2.75757576e-01 2.78299120e-01 2.80840665e-01 2.83382209e-01\n",
+      " 2.85923754e-01 2.88465298e-01 2.91006843e-01 2.93548387e-01\n",
+      " 2.96089932e-01 2.98631476e-01 3.01173021e-01 3.03714565e-01\n",
+      " 3.06256109e-01 3.08797654e-01 3.11339198e-01 3.13880743e-01\n",
+      " 3.16422287e-01 3.18963832e-01 3.21505376e-01 3.24046921e-01\n",
+      " 3.26588465e-01 3.29130010e-01 3.31671554e-01 3.34213099e-01\n",
+      " 3.36754643e-01 3.39296188e-01 3.41837732e-01 3.44379277e-01\n",
+      " 3.46920821e-01 3.49462366e-01 3.52003910e-01 3.54545455e-01\n",
+      " 3.57086999e-01 3.59628543e-01 3.62170088e-01 3.64711632e-01\n",
+      " 3.67253177e-01 3.69794721e-01 3.72336266e-01 3.74877810e-01\n",
+      " 3.77419355e-01 3.79960899e-01 3.82502444e-01 3.85043988e-01\n",
+      " 3.87585533e-01 3.90127077e-01 3.92668622e-01 3.95210166e-01\n",
+      " 3.97751711e-01 4.00293255e-01 4.02834800e-01 4.05376344e-01\n",
+      " 4.07917889e-01 4.10459433e-01 4.13000978e-01 4.15542522e-01\n",
+      " 4.18084066e-01 4.20625611e-01 4.23167155e-01 4.25708700e-01\n",
+      " 4.28250244e-01 4.30791789e-01 4.33333333e-01 4.35874878e-01\n",
+      " 4.38416422e-01 4.40957967e-01 4.43499511e-01 4.46041056e-01\n",
+      " 4.48582600e-01 4.51124145e-01 4.53665689e-01 4.56207234e-01\n",
+      " 4.58748778e-01 4.61290323e-01 4.63831867e-01 4.66373412e-01\n",
+      " 4.68914956e-01 4.71456500e-01 4.73998045e-01 4.76539589e-01\n",
+      " 4.79081134e-01 4.81622678e-01 4.84164223e-01 4.86705767e-01\n",
+      " 4.89247312e-01 4.91788856e-01 4.94330401e-01 4.96871945e-01\n",
+      " 4.99413490e-01 5.01955034e-01 5.04496579e-01 5.07038123e-01\n",
+      " 5.09579668e-01 5.12121212e-01 5.14662757e-01 5.17204301e-01\n",
+      " 5.19745846e-01 5.22287390e-01 5.24828935e-01 5.27370479e-01\n",
+      " 5.29912023e-01 5.32453568e-01 5.34995112e-01 5.37536657e-01\n",
+      " 5.40078201e-01 5.42619746e-01 5.45161290e-01 5.47702835e-01\n",
+      " 5.50244379e-01 5.52785924e-01 5.55327468e-01 5.57869013e-01\n",
+      " 5.60410557e-01 5.62952102e-01 5.65493646e-01 5.68035191e-01\n",
+      " 5.70576735e-01 5.73118280e-01 5.75659824e-01 5.78201369e-01\n",
+      " 5.80742913e-01 5.83284457e-01 5.85826002e-01 5.88367546e-01\n",
+      " 5.90909091e-01 5.93450635e-01 5.95992180e-01 5.98533724e-01\n",
+      " 6.01075269e-01 6.03616813e-01 6.06158358e-01 6.08699902e-01\n",
+      " 6.11241447e-01 6.13782991e-01 6.16324536e-01 6.18866080e-01\n",
+      " 6.21407625e-01 6.23949169e-01 6.26490714e-01 6.29032258e-01\n",
+      " 6.31573803e-01 6.34115347e-01 6.36656891e-01 6.39198436e-01\n",
+      " 6.41739980e-01 6.44281525e-01 6.46823069e-01 6.49364614e-01\n",
+      " 6.51906158e-01 6.54447703e-01 6.56989247e-01 6.59530792e-01\n",
+      " 6.62072336e-01 6.64613881e-01 6.67155425e-01 6.69696970e-01\n",
+      " 6.72238514e-01 6.74780059e-01 6.77321603e-01 6.79863148e-01\n",
+      " 6.82404692e-01 6.84946237e-01 6.87487781e-01 6.90029326e-01\n",
+      " 6.92570870e-01 6.95112414e-01 6.97653959e-01 7.00195503e-01\n",
+      " 7.02737048e-01 7.05278592e-01 7.07820137e-01 7.10361681e-01\n",
+      " 7.12903226e-01 7.15444770e-01 7.17986315e-01 7.20527859e-01\n",
+      " 7.23069404e-01 7.25610948e-01 7.28152493e-01 7.30694037e-01\n",
+      " 7.33235582e-01 7.35777126e-01 7.38318671e-01 7.40860215e-01\n",
+      " 7.43401760e-01 7.45943304e-01 7.48484848e-01 7.51026393e-01\n",
+      " 7.53567937e-01 7.56109482e-01 7.58651026e-01 7.61192571e-01\n",
+      " 7.63734115e-01 7.66275660e-01 7.68817204e-01 7.71358749e-01\n",
+      " 7.73900293e-01 7.76441838e-01 7.78983382e-01 7.81524927e-01\n",
+      " 7.84066471e-01 7.86608016e-01 7.89149560e-01 7.91691105e-01\n",
+      " 7.94232649e-01 7.96774194e-01 7.99315738e-01 8.01857283e-01\n",
+      " 8.04398827e-01 8.06940371e-01 8.09481916e-01 8.12023460e-01\n",
+      " 8.14565005e-01 8.17106549e-01 8.19648094e-01 8.22189638e-01\n",
+      " 8.24731183e-01 8.27272727e-01 8.29814272e-01 8.32355816e-01\n",
+      " 8.34897361e-01 8.37438905e-01 8.39980450e-01 8.42521994e-01\n",
+      " 8.45063539e-01 8.47605083e-01 8.50146628e-01 8.52688172e-01\n",
+      " 8.55229717e-01 8.57771261e-01 8.60312805e-01 8.62854350e-01\n",
+      " 8.65395894e-01 8.67937439e-01 8.70478983e-01 8.73020528e-01\n",
+      " 8.75562072e-01 8.78103617e-01 8.80645161e-01 8.83186706e-01\n",
+      " 8.85728250e-01 8.88269795e-01 8.90811339e-01 8.93352884e-01\n",
+      " 8.95894428e-01 8.98435973e-01 9.00977517e-01 9.03519062e-01\n",
+      " 9.06060606e-01 9.08602151e-01 9.11143695e-01 9.13685239e-01\n",
+      " 9.16226784e-01 9.18768328e-01 9.21309873e-01 9.23851417e-01\n",
+      " 9.26392962e-01 9.28934506e-01 9.31476051e-01 9.34017595e-01\n",
+      " 9.36559140e-01 9.39100684e-01 9.41642229e-01 9.44183773e-01\n",
+      " 9.46725318e-01 9.49266862e-01 9.51808407e-01 9.54349951e-01\n",
+      " 9.56891496e-01 9.59433040e-01 9.61974585e-01 9.64516129e-01\n",
+      " 9.67057674e-01 9.69599218e-01 9.72140762e-01 9.74682307e-01\n",
+      " 9.77223851e-01 9.79765396e-01 9.82306940e-01 9.84848485e-01\n",
+      " 9.87390029e-01 9.89931574e-01 9.92473118e-01 9.95014663e-01\n",
+      " 9.97556207e-01 1.00009775e+00 1.00263930e+00 1.00518084e+00\n",
+      " 1.00772239e+00 1.01026393e+00 1.01280547e+00 1.01534702e+00\n",
+      " 1.01788856e+00 1.02043011e+00 1.02297165e+00 1.02551320e+00\n",
+      " 1.02805474e+00 1.03059629e+00 1.03313783e+00 1.03567937e+00\n",
+      " 1.03822092e+00 1.04076246e+00 1.04330401e+00 1.04584555e+00\n",
+      " 1.04838710e+00 1.05092864e+00 1.05347019e+00 1.05601173e+00\n",
+      " 1.05855327e+00 1.06109482e+00 1.06363636e+00 1.06617791e+00\n",
+      " 1.06871945e+00 1.07126100e+00 1.07380254e+00 1.07634409e+00\n",
+      " 1.07888563e+00 1.08142717e+00 1.08396872e+00 1.08651026e+00\n",
+      " 1.08905181e+00 1.09159335e+00 1.09413490e+00 1.09667644e+00\n",
+      " 1.09921799e+00 1.10175953e+00 1.10430108e+00 1.10684262e+00\n",
+      " 1.10938416e+00 1.11192571e+00 1.11446725e+00 1.11700880e+00\n",
+      " 1.11955034e+00 1.12209189e+00 1.12463343e+00 1.12717498e+00\n",
+      " 1.12971652e+00 1.13225806e+00 1.13479961e+00 1.13734115e+00\n",
+      " 1.13988270e+00 1.14242424e+00 1.14496579e+00 1.14750733e+00\n",
+      " 1.15004888e+00 1.15259042e+00 1.15513196e+00 1.15767351e+00\n",
+      " 1.16021505e+00 1.16275660e+00 1.16529814e+00 1.16783969e+00\n",
+      " 1.17038123e+00 1.17292278e+00 1.17546432e+00 1.17800587e+00\n",
+      " 1.18054741e+00 1.18308895e+00 1.18563050e+00 1.18817204e+00\n",
+      " 1.19071359e+00 1.19325513e+00 1.19579668e+00 1.19833822e+00\n",
+      " 1.20087977e+00 1.20342131e+00 1.20596285e+00 1.20850440e+00\n",
+      " 1.21104594e+00 1.21358749e+00 1.21612903e+00 1.21867058e+00\n",
+      " 1.22121212e+00 1.22375367e+00 1.22629521e+00 1.22883675e+00\n",
+      " 1.23137830e+00 1.23391984e+00 1.23646139e+00 1.23900293e+00\n",
+      " 1.24154448e+00 1.24408602e+00 1.24662757e+00 1.24916911e+00\n",
+      " 1.25171065e+00 1.25425220e+00 1.25679374e+00 1.25933529e+00\n",
+      " 1.26187683e+00 1.26441838e+00 1.26695992e+00 1.26950147e+00\n",
+      " 1.27204301e+00 1.27458456e+00 1.27712610e+00 1.27966764e+00\n",
+      " 1.28220919e+00 1.28475073e+00 1.28729228e+00 1.28983382e+00\n",
+      " 1.29237537e+00 1.29491691e+00 1.29745846e+00 1.30000000e+00]\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "a0f68319b7b24e1488a0791aa287291c",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Canvas(toolbar=Toolbar(toolitems=[('Home', 'Reset original view', 'home', 'home'), ('Back', 'Back to previous …"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[<matplotlib.lines.Line2D at 0x2c6c3a36940>]"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "print(qprof_05['rho'])\n",
+    "\n",
+    "fig=plt.figure(figsize=(6,6))\n",
+    "ax1 = fig.add_subplot(111)\n",
+    "ax1.plot(qprof_05['rho'].get(),qprof_05['Ptransfert'][0,:].get(),label='Ptransfert')"
    ]
   },
   {
